# tagmark-py

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  tagmarks.jsonl
.devcontainer/: devcontainer.json  entrypoint.sh
.github/: CONTRIBUTING.md
.github/workflows/: release.yml  test.yml
doc/: CONTRIBUTING.md  README.md
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  tagmark.mono
tagmark/: cli.py  condition_example.json
tagmark/core/: __init__.py  convert.py  data.py  export.py  github.py  log.py  tag.py
tagmark/tools/: autotagdef.py  checktag.py  maketagdoc.py  maketagdoc.toml.default
tagmark/tools/convert/: diigo.py  tagmark.py
tagmark/tools/export/: diigo.py
tests/: conftest.py
tests/core/: test_data.py  test_github.py  test_tag.py
tests/data/: 16400249_chrome_2023_04_18_b776d.html  16400249_csv_2023_04_18_dc9ef.csv  ban-condition.json  diigo_web_exported.jsonl  maketagdoc_result.md  maketagdoc_template.md  tag_definitions.json  tagmark_ui_data_1682298863.158216.jsonl  tags.json
tests/tools/: test_autotagdef.py  test_checktag.py  test_maketagdoc.py
tests/tools/convert/: test_diigo.py  test_tagmark.py
tests/tools/export/: test_diigo.py
