[tool.poetry]
name = "tagmark"
version = "0.1.0"
description = "tagify bookmarks and show them in a table page with advanced filters and tagcloud"
authors = ["pwnfan <pwnfan@proton.me>"]
readme = "README.md"
packages = [{include = "tagmark"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
structlog = "^23.1.0"
click = "^8.1.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tagmark_cli = "tagmark.cli:cli"