[tool.poetry]
name = "tagmark"
version = "0.3.0"
description = "tagify bookmarks and show them in a table page with advanced filters and tagcloud"
authors = ["pwnfan <pwnfan@proton.me>"]
readme = "docs/README.md"
packages = [{include = "tagmark"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
structlog = "^23.1.0"
click = "^8.1.3"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"
revchatgpt = "^6.8.6"
dacite = "^1.8.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
tagmark_cli = "tagmark.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "if __name__ == .__main__.:",
    "pass",
    "raise NotImplementedError",
]